service-skeleton_derive/tests/ui/on_enum.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/ui/on_enum.rs:4:10
  |
4 | #[derive(ServiceConfig)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ServiceConfig` (in Nightly builds, run with -Z macro-backtrace for more info)
